test/spec_vectors/simd_f64x2_cmp/fail/module_8.wat
(module (func (result v128) (f64x2.ne (i32.const 0) (f32.const 0.0))))